Correct spacing between header and subtitle
* Tweak the .subtitle class to only apply negative margins when
appropriate
* Move the <small> text out of the header and into a paragraph below

--- a/app/assets/stylesheets/base.css.scss
+++ b/app/assets/stylesheets/base.css.scss
@@ -168,8 +168,13 @@ main a {
    ========================================================================== */
 
 .subtitle {
-  margin: -$baseLineHeight 0 $baseLineHeight;
   font-size: $fontSizeLarge;
+  line-height: 1.3;
+  margin-bottom: $baseLineHeight;
+}
+
+.page-title + .subtitle {
+  margin-top: -$baseLineHeight;
 }
 
 .no-content {
