--- a/app/assets/stylesheets/organisations.css.scss
+++ b/app/assets/stylesheets/organisations.css.scss
@@ -6,8 +6,3 @@
     border-left: 0;
   }
 }
-
-.subtitle {
-  display: block;
-  line-height: 1.3;
-}
